---
source: src/tests/identifier_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "is_file",
            expression: Boolean {
                literal: false,
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "is_directory",
            expression: NotPrefix {
                right_hand: Identifier {
                    identifier: "is_file",
                },
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "is_directory",
        },
    },
]
